smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/doc-comments-on-start.smithy
// Syntax error at line 2, column 1: Expected a namespace definition but found DOC_COMMENT('/// This is invalid\n')
/// This is invalid
$version: "2.0"
